# heimdal

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: test.yml
config/: heimdal.manifest.yml
docs/: BACKLOG.md  CONTRIBUTING.md  ENTRYPOINTS.md  Heimdal_OpenClaw_Role_Binding_Contract_v0_1.docx
docs/builder_pack/: INDEX.md
eval/: must_pass.json  no_guess.json  schema.json  smoke.json
examples/answers/: queue_answer.example.json
examples/bridge/: generic_job.example.json  (+3 more)
heimdal/: __init__.py  __main__.py  bridge.py  cli.py  config.py  ids.py  jsonschema_min.py  storage.py
schemas/: bridge_job.schema.json  context_packet.schema.json  dream_report.schema.json  dream_run.schema.json  hermes_result.schema.json  host_task_envelope.schema.json  improvement_proposal.schema.json  mirror_diff.schema.json  mirror_run.schema.json  openclaw_result.schema.json  patch.schema.json  semantic_verification.schema.json  skill.schema.json  verification_result.schema.json
scripts/: dev_setup.sh  install_ubuntu.sh
tests/: __init__.py  helpers.py  test_adapters.py  test_brain_role.py  test_bridge.py  test_capability_matrix.py  test_config_hardening.py  test_contracts.py  test_doctor.py  test_dream.py  test_hardening.py  test_hermes.py  test_logs.py  test_mirror.py  test_mirror_providers.py  test_mirror_scoring.py  test_openclaw.py  test_patch_eval.py  test_pipeline.py  test_role_assignment.py  test_runtime_profile.py  test_scheduler.py  test_semantic_verifier.py  test_skills.py  test_truth.py  test_verifier.py  test_verify.py
(+118 files in other folders)
